Fixed arabic tags alignment and position for arabic posts.

--- a/css/blogpoststyle.css
+++ b/css/blogpoststyle.css
@@ -380,7 +380,7 @@ input[type=text], textarea {
 }
 
 .contentIndividualBlog{
-  float: left;
+  /*float: left;*/
 margin-top: 10px;
 display: inline-block;
 width: 100%;
